<resources>
    <string name="app_name">Buy Nuts Prototype</string>
    <string name="activity_title_contact_seller">Contact Seller</string>
    <string name="activity_title_make_offer">Make Offer</string>
    <string name="activity_title_news">Available Offers</string>
    <string name="activity_title_set_search_filter">Set Search Filter</string>
    <string name="activity_title_view_sell_offer">View Offer</string>
    <string name="activity_title_register_new_user">New User Registration</string>
    <string name="activity_title_edit_sell_offer">Edit Offer</string>

    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_terms_VSO">Terms: </string>
    <string name="str_terms_not_specified_VSO">No terms specified</string>


    <string name="btn_login">Log In</string>
    <string name="btn_register">Register New User</string>
    <string name="btn_refresh_news">Refresh News</string>
    <string name="btn_set_filter">Set Search</string>
    <string name="btn_my_offers">New Offer</string>
    <string name="btn_contact_seller">Contact Seller For Purchase</string>
    <string name="btn_make_offer">Make New Offer</string>
    <string name="btn_set_search_filter">Set Search Filter</string>
    <string name="btn_submit_edited_offer">Submit Edited Offer</string>

    <string name="tv_ppu">Price Per Unit Wt</string>
    <string name="tv_min_weight">Min Weight</string>
    <string name="tv_max_weight">Max Weight</string>
    <string name="tv_terms">Terms/Spec</string>
    <string name="tv_min_ppu">Min PPU</string>
    <string name="tv_max_ppu">Max PPU</string>
    <string name="tv_weights">Weight Units</string>
    <string name="tv_commod_type">Commodity Type</string>

    <string name="lbl_email_CS">Email</string>
    <string name="lbl_telephone_CS">Telephone</string>

    <string name="chk_remember_my_info_ML">Remember my information</string>
    <string name="chk_my_offers_only_SF">Show all offers that I have made</string>
    <string name="chk_show_expired_SF">Only show expired offers</string>
    <string name="chk_show_all_SF">Show all items for one type of nut</string>


    <string name="lbl_registration_password">Password</string>
    <string name="lbl_registration_username">Username</string>
    <string name="lbl_registration_name">Name</string>
    <string name="lbl_registration_phone">Phone</string>
    <string name="lbl_registration_email">Email</string>
    <string name="lbl_registration_confirm">Confirm Password</string>
    <string name="lbl_registration_btn_register">Register Now</string>

    <string name="error_confirm_password">Password and Confirm Password fields do not match; please try again.</string>
    <string name="btn_delete_offer">Delete This Offer</string>
    <string name="btn_confirm_delete">I\'m absolutely sure I want to delete this</string>

    <string-array name="array_commodities">
        <item>Walnut</item>
        <item>Pecan</item>
        <item>Almond</item>
        <item>Cashew</item>
    </string-array>
    <string-array name="array_wt_units">
        <item>lb</item>
        <item>kg</item>
        <item>gross ton (2240lb)</item>
        <item>net ton (2000lb)</item>
        <item>metric tonne (1000kg)</item>
    </string-array>
    
    <string name="key_saved_username">savedUsername</string>
    <string name="key_saved_password">savedPassword</string>
    <string name="key_saved_filter">savedFilter</string>
    <string name="key_saved_units_weight">savedUnitsWt</string>
    <string name="btn_view_sellers_other_offers">View This Seller\'s Other Offers</string>

</resources>
