<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.epsilon.buynutsproto.MakeOfferActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/tv_weights"
                android:id="@+id/tvWeights_MO"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerWeightUnits_MO"
                android:spinnerMode="dropdown"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/tv_commod_type"
                android:id="@+id/tvCommodType_MO"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCommodityType_MO"
                android:spinnerMode="dropdown"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv_ppu"
                android:id="@+id/tvPricePerUnit_MO" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etPPU_MO"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv_min_weight"
                android:id="@+id/tvMinWeight_MO" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etMinWeight_MO"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv_max_weight"
                android:id="@+id/tvMaxWeight_MO" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etMaxWeight_MO"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv_terms"
                android:id="@+id/tvTerms_MO" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etTerms_MO"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_make_offer"
            android:id="@+id/btnMakeOffer_MO"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_offer"
            android:id="@+id/btnDeleteOffer"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm_delete"
            android:id="@+id/btnConfirmDelete"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>
