<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.example.epsilon.buynutsproto.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@android:drawable/ic_menu_edit"
        android:id="@+id/registrationPen"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_name"
            android:id="@+id/tvName"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Name"
            android:layout_weight="1"
            android:inputType="textPersonName|none" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutEmail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_email"
            android:id="@+id/tvEmail"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Email"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.84"
            android:inputType="textEmailAddress|none" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutPhone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_phone"
            android:id="@+id/tvPhone"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Phone"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="phone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutUsername">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_username"
            android:id="@+id/tvUsername"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Username"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="textPersonName|none" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_password"
            android:id="@+id/tv2Password"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Password"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="textPassword|none" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutPasswordConfirm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_registration_confirm"
            android:id="@+id/tv2Confirm"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et2Confirm"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="textPassword|none" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_registration_btn_register"
        android:id="@+id/btnRegisterUser"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRegisterButton"/>


</LinearLayout>
