<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.epsilon.buynutsproto.NewsActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_my_offers"
                android:id="@+id/btnMakeOffer_News"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_set_filter"
                android:id="@+id/btnSetFilter_News"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_refresh_news"
                android:id="@+id/btnRefreshNews_News"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_below="@+id/linearLayout"
            android:layout_above="@+id/tvStatus_News" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status bar for status messages"
            android:id="@+id/tvStatus_News"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="true" />


</RelativeLayout>
